# geqslib

./: Cargo.toml  README.md
src/: constraints.rs  context.rs  errors.rs  ffi.rs  lib.rs  newton.rs  shunting.rs  system.rs  variable.rs
tests/: extra_tests.rs
