[package]
name = "geqslib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
gmatlib = "0.0.1"
lazy_static = "1.4.0"
regex = "1.10.2"

[[test]]
name = "extra_tests"
path = "tests/extra_tests.rs"