[package]
name = "geqslib"
description = "Equation solving made easy in Rust and beyond!"
version = "0.1.1"
edition = "2021"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
gmatlib = "0.0.1"
lazy_static = "1.4.0"
regex = "1.10.2"

[lib]
crate-type = ["rlib", "cdylib"]

[[test]]
name = "extra_tests"
path = "tests/extra_tests.rs"